tests/ui/consts/const-fn-error.stderr
error[E0658]: cannot use `for` loop on `std::ops::Range<usize>` in constant functions
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `IntoIterator` is not yet stable as a const trait
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
help: add `#![feature(const_iter)]` to the crate attributes to enable
   |
LL + #![feature(const_iter)]
   |

error[E0658]: cannot use `for` loop on `std::ops::Range<usize>` in constant functions
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `Iterator` is not yet stable as a const trait
  --> $DIR/const-fn-error.rs:5:14
   |
LL |     for i in 0..x {
   |              ^^^^
   |
help: add `#![feature(const_iter)]` to the crate attributes to enable
   |
LL + #![feature(const_iter)]
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
